--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 ---
 applications:
-- name: spring-music
+- name: spring-music-green
   memory: 1G
   random-route: false
   path: build/libs/spring-music.jar
